# IO-multiplexing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: epoll.cpp  poll.cpp  select.cpp
test/: epollAnswer.txt  gtest.cpp  pollAnswer.txt  selectAnswer.txt
